# Basic-File-System

./: .gitignore  CMakeLists.txt  main  makefile
diagrams/: classes.asta
files/: content.txt  file.txt  marquin.txt  pistonCup.txt  shrek1.txt  shrek2.txt  shrek3.txt
src/: entry_metadata.c  entry_metadata.h  main.c  timestamps.c
src/command/: command.c  command.h
src/entry/: Block.c  Block.h  block.c  directory.c  directory.h  entry_content.c  entry_content.h  entry_header.c  entry_header.h  entry_metadata.c  entry_metadata.h  file.h  timestamps.c  timestamps.h
src/entry/directory/: directory.c  directory.h
src/entry/directory/linkedlist/: linked_list.c  linked_list.h
src/entry/file/: block.c  file.c  file.h
src/linkedlist/: linked_list.c  linked_list.h
src/memory/: block.c  block.h  memory.c  memory.h
src/memory/linkedlist/: linked_list_block.c  linked_list_block.h
src/miscelaneous/: colour.h  error.h  print.h  verbose.h
src/path/: path.c  path.h
src/ufs/: i_node.c  i_node.h  linked_list_i_node.c  ufs.c  ufs.h
src/ufs/linkedlist/: linked_list_i_node.c  linked_list_i_node.h
